public class Componente {
    public double getPreco() {
        return 0;
    }
}