@startuml Composite_AntiPattern
class Produto {
    -nome: String
    -preco: double
    +getPreco(): double
}
class Combo {
    -produtos: List<Produto>
    +addProduto(Produto): void
    +getPreco(): double
}
class Componente {
    +getPreco(): double
}
class Teste {
    +main(String[]): void
}
Teste --> Produto
Teste --> Combo
Combo --> Produto
Componente <|-- Combo
@enduml